# itzam-box

./: .env.example  CHANGELOG.md  NOTICE.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: appimage_setup.md  signoff_phase6.json
e2e/: backup.spec.ts  container-detail.spec.ts  containers.spec.ts  dashboard.spec.ts  edge-cases.spec.ts  images.spec.ts  interactions.spec.ts  kubernetes.spec.ts  metrics.spec.ts  polish.spec.ts  swarm.spec.ts  terminal.spec.ts  theme-i18n.spec.ts  wizard-templates.spec.ts
e2e/fixtures/: mockV12Responses.ts  (+2 more)
scripts/: fix-appimage-webkit.sh  fix-linuxdeploy.sh
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial.sql  002_templates.sql  003_notifications.sql  004_k8s_cache.sql  005_backup_history.sql  006_metrics_timeseries.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: backup.rs  cleanup.rs  compose.rs  containers.rs  events.rs  host_metrics.rs  images.rs  installer.rs  kubernetes.rs  metrics_history.rs  mod.rs  networks.rs  notifications.rs  registries.rs  scanner.rs  settings.rs  swarm.rs  templates.rs  terminal.rs  volumes.rs
src-tauri/src/db/: manager.rs  mod.rs
src-tauri/src/engine/: backup.rs  docker_linux.rs  kubernetes.rs  metrics_history.rs  mod.rs  swarm.rs  traits.rs  types.rs
src-tauri/src/utils/: mod.rs  sanitizer.rs
test-results/: .last-run.json
tests/: test_failures.json
(+112 files in other folders)
