[package]
name = "itzambox"
version = "1.0.0"
description = "ItzamBox — Local and open-source alternative to Docker Desktop"
authors = ["Lic. Josue A. Silva <josue.silva89@icloud.com>"]
license = "GPL-3.0-only"
repository = "https://github.com/JSilvaDev27/itzam-box"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
sysinfo = "0.31"
portable-pty = "0.8"
async-trait = "0.1"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"

[dev-dependencies]
tempfile = "3"
